# camouflare

./: .dockerignore  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  SECURITY.md  compose.yaml  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml
.github/workflows/: ci.yml  nightly.yml  release.yml
camouflare/: __init__.py  __main__.py  app.py  asgi.py  browser.py  captcha.py  challenge.py  cleanup.py  commands.py  config.py  documentation.py  errors.py  limits.py  metrics.py  models.py  navigation.py  observability.py  pool.py  protocols.py  proxy.py  runtime.py  sessions.py  smoke_browser.py  solution.py  solver.py  timer.py
docs/: deployment.md  release-checklist.md  rollback.md  upgrade-to-1.0.md
docs/superpowers/plans/: 2026-07-22-error-contract.md  2026-07-22-observability.md  2026-07-22-pool-acquire-race.md  2026-07-22-retry-and-fallback-policy.md
docs/superpowers/specs/: 2026-07-22-error-resilience-design.md
scripts/: check_image_size.py  check_release_destinations.py  container_smoke.sh  external_browser_smoke.py  fetch_camoufox.py  render_security_allowlist.py  report_image_sizes.py  verify_release.py
tests/: fakes.py  test_api.py  test_browser.py  test_captcha.py  test_cleanup.py  test_cli.py  test_config.py  test_dockerfile.py  test_models.py  test_observability.py  test_pool.py  test_proxy.py  test_release_readiness.py  test_release_scripts.py  test_runtime.py  test_sessions.py  test_solver.py
tests/integration/: conftest.py  support.py  test_real_browser.py
tests/soak/: test_browser_soak.py
