[build-system]
requires = ["setuptools>=77"]
build-backend = "setuptools.build_meta"

[project]
name = "camouflare"
dynamic = ["version"]
description = "FlareSolverr-compatible FastAPI service powered by Camoufox"
readme = "README.md"
requires-python = ">=3.11,<3.15"
license = "Apache-2.0"
license-files = ["LICENSE"]
authors = [{ name = "Mehmetcan" }]
maintainers = [{ name = "Mehmetcan" }]
keywords = ["camoufox", "fastapi", "flaresolverr", "playwright"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Framework :: FastAPI",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Internet :: WWW/HTTP",
]
dependencies = [
    "aiofiles>=24,<25",
    "camoufox[geoip]>=0.4,<0.5",
    "fastapi>=0.136,<0.137",
    "playwright-captcha>=0.1.5,<0.2",
    "prometheus-client>=0.23,<0.24",
    "pydantic>=2,<3",
    "uvicorn[standard]>=0.38,<0.39",
]

[project.urls]
Homepage = "https://github.com/mehmetcansahin/camouflare"
Repository = "https://github.com/mehmetcansahin/camouflare"
Issues = "https://github.com/mehmetcansahin/camouflare/issues"

[project.scripts]
camouflare = "camouflare.__main__:main"
camouflare-smoke = "camouflare.smoke_browser:main"

[dependency-groups]
dev = [
    "httpx>=0.28,<0.29",
    "pyright>=1.1,<2",
    "pytest>=9,<10",
    "pytest-asyncio>=1.3,<2",
    "pytest-cov>=6,<8",
    "ruff>=0.15,<0.16",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "browser: requires a real Camoufox browser runtime",
    "integration: deterministic integration test using local services",
    "soak: long-running resource and stability test",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "RUF"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["B017"]

[tool.setuptools.dynamic]
version = { attr = "camouflare._version.__version__" }

[tool.setuptools.packages.find]
include = ["camouflare*"]

[tool.pyright]
typeCheckingMode = "standard"
pythonVersion = "3.11"
venvPath = "."
venv = ".venv"
include = ["camouflare"]
exclude = ["camouflare/documentation.py"]
strict = [
    "camouflare/_version.py",
    "camouflare/limits.py",
    "camouflare/challenge.py",
    "camouflare/runtime.py",
    "camouflare/protocols.py",
]

[tool.coverage.run]
source = ["camouflare"]
omit = ["camouflare/documentation.py", "camouflare/smoke_browser.py"]

[tool.coverage.report]
fail_under = 85
show_missing = true
skip_covered = true
